Fix description not showing in some browsers.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -7,7 +7,7 @@
   border-radius: @border-radius-base;
   box-shadow: 0 1px 1px #999;
 
-  .ad-section {
+  .ad-sect {
     border-top: 1px solid @border-color;
     padding: 5px 10px;
 
